# Safe-UDP

./: CMakeLists.txt
config/: client_config.json  server_config.json
files/client_files/: 天龙八部.txt
test/: client.cpp  server.cpp
udp_transport/: CMakeLists.txt  buffer.h  data_segment.cpp  data_segment.h  sliding_window.h  udp_client.cpp  udp_client.h  udp_server.cpp
